--- a/src/views/Inspection/style.css
+++ b/src/views/Inspection/style.css
@@ -1,33 +1,34 @@
 .Inspection{
-  height: 100%;
   /* padding: 1%; */
   margin: 1%;
   margin-bottom: 0;
   display: flex;
   flex-direction: row;
+  /* background-color: lightpink; */
 }
 .Inspection_1{
-  height: 100%;
   width: 30%;
+  /* background-color: magenta; */
+  height: 100%;
 }
 .Inspection_2{
-  height: 100%;
   width: 55%;
 }
 .Inspection_3{
-  /* height: 100%; */
   width: 15%;
 }
 .Inspection_3_1{
-  height: 50%;
+  height:47%;
 }
 .Inspection_3_2{
-  height: 50%;
+  height:48%;
 }
 
 /* InspectionPatientList */
 .InspectionPatientList{
   padding-right: 10px;
+  /* height: 100%; */
+  /* background-color: lightgreen; */
 }
 .InspectionPatientList_title{
   font-size: larger;
@@ -37,6 +38,7 @@
   /* border: 1px solid black; */
   padding-top: 10px;
   padding: 10px;
+  /* height: 100%; */
 }
 .InspectionPatientList_1_1{
   display: flex;
@@ -57,9 +59,13 @@
   margin-right: 6px;
   color: #00AAF0;
 }
+.dd{
+  height: 98%;
+}
 .InspectionPatientList_2_1{
   text-align: center;
   font-size: small;
+  
 }
 .InspectionPatientList_2_2{
   background-color: lightgray;
@@ -90,6 +96,7 @@
 .InspectionList_2_1{
   text-align: center;
   font-size: small;
+  height: 100%;
 }
 .InspectionList_2_2{
   background-color: lightgray;
