[update] patient, login, auth

--- a/src/views/Help/style.module.css
+++ b/src/views/Help/style.module.css
@@ -35,7 +35,11 @@
 
 /* icon */
 .icon {
+  color: white;
   font-size: 9rem;
   text-align: center;
   padding-top: 5rem;
+}
+.icon1:hover {
+  color: #65BFF7;
 }
