--- a/src/views/Patient/style.module.css
+++ b/src/views/Patient/style.module.css
@@ -1,18 +1,24 @@
+.Patient {
+  padding: 1%;
+  padding-bottom: 0;
+}
+
 /* 좌측 컴포넌트 */
 .left {
   width: 60%;
-  margin: 1rem;
-  padding: 1rem;
-  margin-left: 2rem;
-  margin-right: 0;
-  margin-bottom: 0;
+  margin-right: 1%;
 }
 
 /* 우측 컴포넌트 */
 .right {
-  width: 35%;
-  margin: 1rem;
-  padding: 1rem;
+  width: 39%;
+  padding: 0;
+}
+.right1 {
+  /* height: 50%; */
+}
+.right2 {
+  /* height: 50%; */
 }
 
 /* title */
@@ -24,14 +30,29 @@
 
 /* PatientList */
 .PatientList {
-  height: 48rem;
+  height: 100%;
+  padding: 10px;
+  padding-top: 0;
+  /* background-color: wheat; */
+}
+
+.PatientList_content {
+  padding: 10px;
+  /* background-color: teal; */
+  height: 96.8%;
 }
 
 .PatientList_Table {
   background-color: lightgray;
+  height: 100%;
 }
 
 /* PatientUpdateForm */
-.button1 {
-  background-color: #00AAF0;
+.PatientUpdateForm {
+  /* font-size: small; */
+}
+
+/* PatientCreateForm */
+.PatientCreateForm {
+  /* font-size: small; */
 }
