--- a/src/views/Register/Register.css
+++ b/src/views/Register/Register.css
@@ -1,24 +1,23 @@
 /* Register 컴포넌트 배치 CSS */
 
-.Register{
+.Register {
   display: flex;
   flex-direction: column;
   margin: 1% 1% 1% 1%;
 }
-.Register_1{
+.Register_1 {
   display: flex;
   flex-direction: row;
   /* background-color: blue; */
   height: 40%;
 }
-.Register_2{
-
+.Register_2 {
 }
-.Register_2_header{
+.Register_2_header {
   font-size: larger;
   font-weight: bold;
 }
-.Register_Components{
+.Register_Components {
   display: flex;
   flex-direction: row;
   /* background-color: blueviolet; */
@@ -29,7 +28,7 @@
 
 /* RegisterList */
 
-.RegisterList{
+.RegisterList {
   display: flex;
   flex-direction: column;
   width: 70%;
@@ -37,69 +36,74 @@
   /* margin: 1% 1% 1% 1%; */
   height: 100%;
 }
-.RegisterList_header{
+.RegisterList_header {
   display: flex;
   flex-direction: row;
 }
-.RegisterList_header_content{
+.RegisterList_header_content {
   flex-grow: 9;
   font-size: larger;
   font-weight: bold;
 }
-.RegisterList_header_button{
+.RegisterList_header_button {
   flex-grow: 3;
   display: flex;
   justify-content: flex-end;
   margin-right: 5px;
 }
-.RegisterList_content{
+.RegisterList_content {
   display: flex;
   flex-direction: column;
   height: 100%;
   margin-top: 3px;
   padding: 10px 10px 0 10px;
 }
-.RegisterList_content_1{
+.RegisterList_content_1 {
   display: flex;
   flex-direction: row;
   margin: 3px;
 }
-.RegisterList_content_1_1{
+.RegisterList_content_1_1 {
   display: flex;
   flex-direction: row;
   flex-grow: 4;
+  font-size: small;
 }
-.RegisterList_content_1_2{
+.RegisterList_content_1_2 {
   display: flex;
   flex-direction: row;
   flex-grow: 4;
   justify-content: space-between;
 }
-.RegisterList_content_1_2_ready{
-  color:#009900;
+.RegisterList_content_1_2_ready {
+  color: #009900;
 }
-.RegisterList_content_1_2_finish{
-  color:#00AAF0;
+.RegisterList_content_1_2_finish {
+  color: #00aaf0;
 }
-.RegisterList_content_1_2_cancel{
-  color:#ff6600;
+.RegisterList_content_1_2_cancel {
+  color: #ff6600;
 }
-.RegisterList_content_1_3{
+.RegisterList_content_1_3 {
   display: flex;
   flex-direction: row;
   flex-grow: 4;
   justify-content: flex-end;
 }
-.RegisterList_content_2{
+.RegisterList_content_2 {
   margin-top: 5px;
   text-align: center;
-  font-size: small;
+  font-size: small;  
+  overflow-y: scroll;
+  height: 250px;
 }
 thead {
   background-color: lightgray;
+  position: sticky;
+  top: -1px;
 }
 /* RegisterRead */
-.RegisterRead{
+.RegisterRead {
   display: flex;
   flex-direction: column;
   width: 30%;
@@ -107,122 +111,134 @@ thead {
   /* background-color: brown; */
   margin: 3px 0 1% 1%;
 }
-.RegisterRead_header{
+.RegisterRead_header {
   font-size: larger;
   font-weight: bold;
 }
-.RegisterRead_content{
+.RegisterRead_content {
   display: flex;
   flex-direction: row;
   font-size: small;
 }
-.RegisterRead_content_form{
+.RegisterRead_content_form {
   width: 100%;
 }
-.RegisterRead_content_list{
+.RegisterRead_content_list {
   display: flex;
   flex-direction: row;
-  margin-top: 3px;
-  margin-bottom: 3px;
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
-.RegisterRead_content_list_label{
+.RegisterRead_content_list_label {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 38%;
 }
-.RegisterRead_content_list_input{
+.RegisterRead_content_list_input {
   display: flex;
   width: 62%;
 }
-.RegisterRead_content_list_input>input, select{
+.RegisterRead_content_list_input > input,
+select {
   width: 95%;
 }
-.RegisterRead_content_button{
+.RegisterRead_content_list_input_readOnly{
+  border:none;
+}
+.RegisterRead_content_list_input_readOnly:focus{
+  outline:none;
+}
+.RegisterRead_content_button {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   padding: 18px;
 }
 /* RegisterPatientList */
-.RegisterPatientList{
+.RegisterPatientList {
   display: flex;
   flex-direction: column;
   flex-grow: 3;
 }
-.RegisterPatientList_header{
+.RegisterPatientList_header {
   font-size: medium;
   font-weight: bold;
 }
-.RegisterPatientList_search{
+.RegisterPatientList_search {
   display: flex;
   flex-direction: row;
   margin-bottom: 5px;
   padding: 10px 0 10px 0;
 }
-.RegisterPatientList_search_input{
+.RegisterPatientList_search_input {
   display: flex;
   flex-grow: 2;
+  font-size: small;
 }
-.RegisterPatientList_search_input_1{
+.RegisterPatientList_search_input_1 {
   width: 100%;
 }
-.RegisterPatientList_search_button{
+.RegisterPatientList_search_button {
   display: flex;
 
   align-items: center;
   justify-content: flex-end;
 }
-.RegisterPatientList_content{
+.RegisterPatientList_content {
   text-align: center;
   padding: 10px;
   height: 100%;
 }
-.RegisterPatientList_content_table{
+.RegisterPatientList_content_table {
   font-size: small;
+  overflow-y: scroll;
+  height: 310px;
 }
 /* RegisterCreateForm */
-.RegisterCreateForm{
+.RegisterCreateForm {
   flex-grow: 1;
   /* background-color: crimson; */
   margin: 28px 1% 0 1%;
   font-size: small;
 }
-.RegisterCreateForm_content{
+.RegisterCreateForm_content {
   padding: 10px;
 }
 
-.RegisterCreateForm_cal{
+.RegisterCreateForm_cal {
   display: flex;
   justify-content: center;
   zoom: 80%;
 }
-.RegisterCreateForm_input{
+.RegisterCreateForm_input {
 }
-.RegisterCreateForm_input_select{
+.RegisterCreateForm_input_select {
   width: 100%;
 }
-.RegisterCreateForm_input_textarea{
+.RegisterCreateForm_input_textarea {
   width: 100%;
   resize: none;
 }
-.RegisterCreateForm_button{
+.RegisterCreateForm_button {
   display: flex;
   justify-content: flex-end;
 }
 
 /* RegisterTimeTable */
-.RegisterTimeTable{
+.RegisterTimeTable {
   /* background-color: darksalmon; */
   flex-grow: 8;
   margin: 3px 1% 3px 1%;
   height: 100%;
 }
-.RegisterTimeTable_content{
+.RegisterTimeTable_content {
   font-size: small;
   text-align: center;
   height: 100%;
 }
-.RegisterTimeTable_content td, th {
-  padding: 7.5px!important;
+.RegisterTimeTable_content td,
+th {
+  padding: 7.5px !important;
 }
+
