--- a/src/views/Inspection/Inspection.css
+++ b/src/views/Inspection/Inspection.css
@@ -138,7 +138,6 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  padding-right: 10px;
 }
 
 /* InspectionImgCreateForm */
@@ -165,15 +164,17 @@
   font-size: small;
 }
 .InspectionImgCreateForm_1_1_1{
-  padding-left: 10px;
+  display: flex;
+  flex-direction: row;
   margin-bottom: 10px;
+  /* margin-right: 50px; */
+  margin-left: -15px;
   font-size: small;
 }
 .InspectionImgCreateForm_1_2{
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  padding-right: 10px;
 }
 
 /* InspectionImgForm */
@@ -191,6 +192,9 @@
 }
 
 /* InspectionBarcodePop */
+.InspectionBarcodePop{
+  margin: 20px;
+}
 .InspectionBarcodePop_1{
   border: 1px solid black;
   padding: 10px;
@@ -211,6 +215,8 @@
   align-items: center;
   /* border: 1px solid black; */
   margin-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .InspectionBarcodePop_1_3{
   display: flex;
