--- a/src/views/Inspection/modal.css
+++ b/src/views/Inspection/modal.css
@@ -1,4 +1,5 @@
-.modal {
+
+.InspectionModal > .modal {
   display: none;
   position: fixed;
   top: 0;
@@ -8,7 +9,7 @@
   z-index: 99;
   background-color: rgba(0, 0, 0, 0.6);
 }
-.modal > section {
+.InspectionModal > .modal > section {
   /* width: 800px;
   height: 400px; */
   max-width: 800px;
@@ -19,7 +20,7 @@
   animation: modal-show .3s;
   overflow: hidden;
 }
-.modal.openModal {
+.InspectionModal > .modal.openModal {
   display: flex;
   align-items: center;
   /* 팝업이 열릴때 스르륵 열리는 효과 */
