--- a/src/views/Treatment/TreatmentModal.css
+++ b/src/views/Treatment/TreatmentModal.css
@@ -1,4 +1,10 @@
-.modal {
+.TreatmentImgReadmain{
+
+}
+
+
+
+.TreatmentImgReadmain > .modal {
   /* display: none; */
   /* position: fixed; */
   /* top: 0;
@@ -10,12 +16,12 @@
 
   width: 1000px;
 }
-.modal button {
+.TreatmentImgReadmain > .modal > button {
   /* outline: none; */
   cursor: pointer;
   border: 0;
 }
-.modal > section {
+.TreatmentImgReadmain > .modal > section {
   width: 100%;
   /* max-width: 450px; */
   /* margin:0 auto; */
@@ -42,7 +48,7 @@
   color: #999;
   background-color: transparent;
 } */
-.modal > section > main {
+.TreatmentImgReadmain > .modal > section > main {
   padding: 16px;
   /* border-bottom: 1px solid #dee2e6;
   border-top: 1px solid #dee2e6; */
@@ -51,14 +57,14 @@
   padding: 12px 16px;
   text-align: right;
 } */
-.modal > section > main> button {
+.TreatmentImgReadmain > .modal > section > main> button {
   padding: 6px 12px;
   color: #fff;
   background-color: #6c757d;
   border-radius: 5px;
   font-size: 13px;
 }
-.modal.openModal {
+.TreatmentImgReadmain > .modal.openModal {
   display: flex;
   align-items: center;
   /* 팝업이 열릴때 스르륵 열리는 효과 */
