--- a/src/views/Treatment/TreatmentModal.css
+++ b/src/views/Treatment/TreatmentModal.css
@@ -1,20 +1,14 @@
-.TreatmentImgReadmain{
-
-}
-
-
 
 .TreatmentImgReadmain > .modal {
-  /* display: none; */
-  /* position: fixed; */
-  /* top: 0;
+  display: none;
+  position: fixed;
+  top: 0;
   right: 0;
   bottom: 0;
-  left: 0; */
-  /* z-index: 99; */
-  /* background-color: rgba(0, 0, 0, 0.6); */
+  left: 0;
+  z-index: 99;
+  background-color: rgba(0, 0, 0, 0.6);
 
-  width: 1000px;
 }
 .TreatmentImgReadmain > .modal > button {
   /* outline: none; */
@@ -31,32 +25,13 @@
   animation: modal-show .3s;
   overflow: hidden;
 }
-/* .modal > section > header {
-  position: relative;
-  padding: 16px 64px 16px 16px;
-  background-color: #f1f1f1;
-  font-weight: 700;
-} */
-/* .modal > section > header button {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  width: 30px;
-  font-size: 21px;
-  font-weight: 700;
-  text-align: center;
-  color: #999;
-  background-color: transparent;
-} */
+
 .TreatmentImgReadmain > .modal > section > main {
   padding: 16px;
   /* border-bottom: 1px solid #dee2e6;
   border-top: 1px solid #dee2e6; */
 }
-/* .modal > section > footer {
-  padding: 12px 16px;
-  text-align: right;
-} */
+
 .TreatmentImgReadmain > .modal > section > main> button {
   padding: 6px 12px;
   color: #fff;
@@ -64,7 +39,7 @@
   border-radius: 5px;
   font-size: 13px;
 }
-.TreatmentImgReadmain > .modal.openModal {
+.TreatmentImgReadmain.modal.openModal {
   display: flex;
   align-items: center;
   /* 팝업이 열릴때 스르륵 열리는 효과 */
