--- a/src/views/Patient/AddressModal.css
+++ b/src/views/Patient/AddressModal.css
@@ -25,6 +25,7 @@
   padding: 16px;
   border-bottom: 1px solid #dee2e6;
   border-top: 1px solid #dee2e6;
+  height: 1800px;
 }
 .patientModal > .modal.openModal {
   display: flex;
