--- a/src/views/Inspection/InspectionModal.css
+++ b/src/views/Inspection/InspectionModal.css
@@ -19,6 +19,7 @@
   /* 팝업이 열릴때 스르륵 열리는 효과 */
   animation: modal-show .3s;
   overflow: hidden;
+  background-color: white;
 }
 .InspectionModal > .modal.openModal {
   display: flex;
