--- a/src/views/Inspection/Inspection.css
+++ b/src/views/Inspection/Inspection.css
@@ -44,8 +44,14 @@
   display: flex;
   flex-direction: row;
 }
-.InspectionPatientList_1_2{
-  width: 10px;
+.InspectionPatientList_1_2_1{
+  /* width: 40%; */
+}
+.InspectionPatientList_1_2_2{
+  width: 10%;
+}
+.InspectionPatientList_1_2_2{
+  width:50%;
 }
 .InspectionPatientList_1_3_1{
   margin-right: 6px;
