--- a/src/views/User/User.css
+++ b/src/views/User/User.css
@@ -34,11 +34,27 @@
 
 .UserList_Table {  
   background-color: lightgray;
-  height: 100%;
+  height: 2.5rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+
+.UserList_tr {
+  display: flex;
+  border-bottom: lightgray solid 0.5px;
+  align-items: center;
 }
 
 .UserList_tr:hover {
   background-color: #00AAF0;
   color:white;
   cursor: pointer;
+}
+
+.UserList_container {
+  display: flex;
+  /* flex: 1; */
+  /* flex-direction: row; */
+  background-color: aquamarine;
 }
