--- a/src/views/Inspection/Inspection.css
+++ b/src/views/Inspection/Inspection.css
@@ -12,10 +12,10 @@
   height: 100%;
 }
 .Inspection_2{
-  width: 55%;
+  width: 70%;
 }
 .Inspection_3{
-  width: 15%;
+  /* width: 15%; */
 }
 .Inspection_3_1{
   height:48%;
@@ -117,6 +117,12 @@
   height: 730px;
 }
 
+/* InspectionListItem */
+.InspectionListItem_1{
+  display: flex;
+  justify-content: center;
+}
+
 /* InspectionCreateForm */
 .InspectionCreateForm{
   height: 100%;
@@ -151,7 +157,7 @@
   height: 100%;
 }
 .InspectionImgCreateForm_title{
-  font-size: larger;
+  font-size: large;
   font-weight: bold;
 }
 .InspectionImgCreateForm_1{
@@ -188,13 +194,31 @@
   height: 100%;
 }
 .InspectionImgForm_title{
-  font-size: larger;
+  font-size: large;
   font-weight: bold;
 }
 .InspectionImgForm_1{
   /* border: 1px solid black; */
+  display: flex;
+  flex-direction: row;
   padding: 10px;
   height: 100%;
+}
+.InspectionImgForm_1_1{
+  /* display: flex;
+  flex-direction: row; */
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5px;
+  font-size: small;
+  width: 30%;
+}
+.InspectionImgForm_1_2{
+  width: 70%;
+}
+.InspectionImgForm_2{
+  display: flex;
+  justify-content: flex-end;
 }
 
 /* InspectionBarcodePop */
