--- a/src/views/Inspection/InspectionImgModal.css
+++ b/src/views/Inspection/InspectionImgModal.css
@@ -1,4 +1,4 @@
-.InspectionModal > .modal {
+.InspectionImgModal > .modal {
   display: none;
   position: fixed;
   top: 0;
@@ -8,11 +8,11 @@
   z-index: 99;
   background-color: rgba(0, 0, 0, 0.6);
 }
-.InspectionModal > .modal > section {
+.InspectionImgModal > .modal > section {
   /* width: 800px;
   height: 400px; */
-  max-width: 800px;
-  max-height: 500px;
+  max-width: 900px;
+  max-height: 800px;
   margin:0 auto;
   border-radius: .3rem;
   /* 팝업이 열릴때 스르륵 열리는 효과 */
@@ -20,7 +20,7 @@
   overflow: hidden;
   background-color: white;
 }
-.InspectionModal > .modal.openModal {
+.InspectionImgModal > .modal.openModal {
   display: flex;
   align-items: center;
   /* 팝업이 열릴때 스르륵 열리는 효과 */
