--- a/src/views/User/User.css
+++ b/src/views/User/User.css
@@ -5,13 +5,13 @@
 
 /* 좌측 컴포넌트 */
 .User_left {
-  width: 60%;
+  width: 70%;
   margin-right: 1%;
 }
 
 /* 우측 컴포넌트 */
 .User_right {
-  width: 39%;
+  width: 29%;
   padding: 0;
 }
 
@@ -30,6 +30,25 @@
 .UserList_content {
   padding: 10px;
   height: 96.8%;
+}
+
+.UserList_content1 {
+  display: flex;
+  justify-content: space-between;  
+  align-items: center;
+}
+
+.UserList_content1_1 {
+  display: flex;
+  width: 25%;
+}
+
+.UserList_content1_2 {
+  display: flex;
+}
+
+.UserList_content1_2 > div:hover {
+  color: #00AAF0;
 }
 
 .UserList_Table {  
@@ -53,8 +72,22 @@
 }
 
 .UserList_container {
+  /* display: flex; */
+  flex: 1;
+  /* flex-direction: row;
+  background-color: aquamarine; */
+}
+
+.content {
   display: flex;
   /* flex: 1; */
-  /* flex-direction: row; */
+  flex-direction: row;
   background-color: aquamarine;
 }
+
+/* UserCreateForm & UserUpdateForm */
+.User_item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+};
