--- a/src/views/Register/Register.css
+++ b/src/views/Register/Register.css
@@ -12,6 +12,7 @@
   height: 40%;
 }
 .Register_2 {
+  height: 50%;
 }
 .Register_2_header {
   font-size: larger;
@@ -21,7 +22,7 @@
   display: flex;
   flex-direction: row;
   /* background-color: blueviolet; */
-  height: 50%;
+  height: 100%;
   margin-top: 10px;
   padding: 10px;
 }
@@ -93,14 +94,32 @@
 .RegisterList_content_2 {
   margin-top: 5px;
   text-align: center;
-  font-size: small;  
+  font-size: small;
   overflow-y: scroll;
   height: 250px;
 }
-.RegisterList_content_2_tr:hover{
-  background-color: #00AAF0;
-  color:white;
+.RegisterList_content_2_tr:hover {
+  background-color: #00aaf0;
+  color: white;
   cursor: pointer;
+}
+.RegisterList_content_2_tr_td_ready {
+  color: #009900;
+}
+.RegisterList_content_2_tr_td_ready:hover {
+  color: white;
+}
+.RegisterList_content_2_tr_td_finish {
+  color: #00aaf0;
+}
+.RegisterList_content_2_tr_td_finish:hover {
+  color: white;
+}
+.RegisterList_content_2_tr_td_cancel {
+  color: #ff6600;
+}
+.RegisterList_content_2_tr_td_cancel:hover {
+  color: white;
 }
 thead {
   background-color: lightgray;
@@ -148,11 +167,11 @@ thead {
 select {
   width: 95%;
 }
-.RegisterRead_content_list_input_readOnly{
-  border:none;
+.RegisterRead_content_list_input_readOnly {
+  border: none;
 }
-.RegisterRead_content_list_input_readOnly:focus{
-  outline:none;
+.RegisterRead_content_list_input_readOnly:focus {
+  outline: none;
 }
 .RegisterRead_content_button {
   display: flex;
@@ -202,11 +221,11 @@ select {
 select {
   width: 95%;
 }
-.RegisterUpdateForm_content_list_input_readOnly{
-  border:none;
+.RegisterUpdateForm_content_list_input_readOnly {
+  border: none;
 }
-.RegisterUpdateForm_content_list_input_readOnly:focus{
-  outline:none;
+.RegisterUpdateForm_content_list_input_readOnly:focus {
+  outline: none;
 }
 .RegisterUpdateForm_content_button {
   display: flex;
@@ -255,9 +274,9 @@ select {
   overflow-y: scroll;
   height: 310px;
 }
-.RegisterPatientList_content_table_tr:hover{
-  background-color: #00AAF0;
-  color:white;
+.RegisterPatientList_content_table_tr:hover {
+  background-color: #00aaf0;
+  color: white;
   cursor: pointer;
 }
 
@@ -301,10 +320,185 @@ select {
 .RegisterTimeTable_content {
   font-size: small;
   text-align: center;
-
 }
 .RegisterTimeTable_content td,
 th {
   padding: 7.5px !important;
 }
 
+/* RegisterTimeSchedule */
+.RegisterTimeSchedule {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  font-size: small;
+}
+.RegisterTimeSchedule_header {
+  margin: 5px;
+}
+.RegisterTimeSchedule_content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.RegisterTimeSchedule_content_title {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.RegisterTimeSchedule_content_title_today {
+  border: solid 0.5px #dee2e6;
+  font-size: small;
+  overflow: auto;
+  text-align: center;
+}
+.RegisterTimeSchedule_content_title_today .react-datepicker__input-container {
+  width: 50px !important;
+  height: 100px !important;
+  text-align: center;
+}
+.RegisterTimeSchedule_content_title_today input {
+  width: 50px !important;
+  height: 100px !important;
+  border: solid 0.5px #dee2e6 !important;
+  text-align: center;
+  cursor: pointer;
+}
+.RegisterTimeSchedule_content_title_today input:focus {
+  width: 50px !important;
+  height: 100px !important;
+  outline: solid 0.5px #dee2e6 !important;
+  border: solid 0.5px #dee2e6 !important;
+  cursor: pointer;
+}
+.RegisterTimeSchedule_content_title_today .react-datepicker-ignore-onclickoutside {
+  width: 50px !important;
+  height: 100px !important;
+}
+.RegisterTimeSchedule_content_title_hours {
+  display: flex;
+  flex-direction: row;
+  height: 100px;
+}
+.RegisterTimeSchedule_content_title_hours_hour {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  height: 100px;
+}
+.RegisterTimeSchedule_content_title_hours_hour_upside {
+  border: solid 0.5px #dee2e6;
+  height: 50px;
+  line-height: 50px;
+}
+.RegisterTimeSchedule_content_title_hours_hour_downside {
+  display: flex;
+  flex-direction: row;
+  height: 50px;
+  line-height: 50px;
+}
+.RegisterTimeSchedule_content_title_hours_hour_downside_content {
+  border: solid 0.5px #dee2e6;
+  width: 50px;
+}
+.RegisterTimeSchedule_content_title_hours_hour_downside_content_today {
+  border: solid 2px #00aaf0;
+  width: 50px;
+  font-weight: bold;
+}
+.RegisterTimeSchedule_content_timetable {
+  display: flex;
+  flex-direction: column;
+
+  text-align: center;
+  height: 250px;
+  overflow-y: scroll;
+}
+.RegisterTimeSchedule_content_timetable::-webkit-scrollbar {
+  display: none;
+}
+.RegisterTimeSchedule_content_timetable_doctors {
+  display: flex;
+  flex-direction: row;
+  height: 50px;
+  font-size: x-small;
+}
+.RegisterTimeSchedule_content_timetable_doctors_doctor {
+  text-align: center;
+  line-height: 50px;
+  width: 50px !important;
+  border: solid 0.5px #dee2e6;
+}
+.RegisterTimeSchedule_content_timetable_doctors_registers {
+  display: flex;
+  flex-direction: row;
+  border: solid 0.5px #dee2e6;
+}
+.RegisterTimeSchedule_content_timetable_doctors_registers_register {
+  border: solid 0.5px #dee2e6;
+  width: 50px;
+}
+.RegisterTimeSchedule_content_timetable_doctors_registers_register_ready {
+  line-height: 20px;
+  background-color: #009900;
+  height: 100%;
+  color: white;
+}
+.RegisterTimeSchedule_content_timetable_doctors_registers_register_ready:hover {
+  cursor: pointer;
+}
+.RegisterTimeSchedule_content_timetable_doctors_registers_register_success {
+  line-height: 20px;
+  background-color: #00aaf0;
+  height: 100%;
+  color: white;
+}
+.RegisterTimeSchedule_content_timetable_doctors_registers_register_success:hover {
+  cursor: pointer;
+}
+.RegisterTimeSchedule_content_timetable_doctors_registers_register_cancel {
+  line-height: 20px;
+  background-color: #ff6600;
+  height: 100%;
+  color: white;
+}
+.RegisterTimeSchedule_content_timetable_doctors_registers_register_cancel:hover {
+  cursor: pointer;
+}
+.tip:hover {
+  position: relative
+}
+.tip span {
+  display: none
+}
+.tip:hover span {
+  border: #010801 1px solid;
+  padding: 5px 20px 5px 5px;
+  display: block;
+  z-index: 100;
+  background: #009900 no-repeat 100% 5%;
+  left: 0px;
+  margin: 10px;
+  width: 250px;
+  position: absolute;
+  top: 10px;
+  text-decoration: none
+}
+.balloon_ready {
+  position: relative;
+  margin: 50px;
+  width: 400px;
+  height: 100px;
+  background: #009900;
+  border-radius: 10px;
+}
+.balloon_ready:after {
+  border-top:0px solid transparent;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #010801;
+  content:"";
+  position:absolute;
+  top:-10px;
+  left:10px;
+ }
