--- a/src/views/Treatment/TreatmentImgModal.css
+++ b/src/views/Treatment/TreatmentImgModal.css
@@ -12,7 +12,8 @@
 
 .TreatmentImgmodal > .modal > section {
   /* width: 100%; */
-  max-width: 1000px;
+  width: 1200px;
+  /* max-width: 1000px; */
   margin:0 auto;
   border-radius: .3rem;
   background-color: #fff;
