--- a/src/views/Auth/Auth.css
+++ b/src/views/Auth/Auth.css
@@ -1,12 +1,74 @@
 .Auth {
-  width: 40rem;
-  padding-top: 7rem;
+  color: black;
+}
+
+.Auth_title {
+  font-size: larger;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
 }
 
 .Auth_content {
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
-  /* padding-bottom: 0.5rem; */
-  /* border-bottom: lightgray solid 0.5px; */
+  padding-bottom: 0.5rem;
+  border-bottom: lightgray solid 0.5px;
+}
+.Auth_content2 {
+  display: flex;
+  align-items: center;
+}
+
+.Auth > .modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 99;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.Auth > .modal > section {
+  width: 100%;
+  /* max-width: 750px;  */
+  height: 100%;
+  max-height: 725px;
+  margin:0 auto;
+  border-radius: .3rem;
+  background-color: #fff;
+  /* 팝업이 열릴때 스르륵 열리는 효과 */
+  animation: modal-show .3s;
+  overflow: hidden;
+}
+
+.Auth > .modal > section > main {
+  padding: 16px;
+  border-bottom: 1px solid #dee2e6;
+  border-top: 1px solid #dee2e6;
+}
+.Auth > .modal.openModal {
+  display: flex;
+  align-items: center;
+  /* 팝업이 열릴때 스르륵 열리는 효과 */
+  animation: modal-bg-show .3s;
+}
+@keyframes modal-show {
+  from {
+      opacity: 0;
+      /* margin-top: -50px; */
+  }
+  to {
+      opacity: 1;
+      margin-top: 0;
+  }
+}
+@keyframes modal-bg-show {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
 }
