--- a/src/views/Login.css
+++ b/src/views/Login.css
@@ -11,65 +11,8 @@
   padding-top: 9rem;
 }
 
-.img {
-  width: 100%;
-  margin-left: 2rem;
-  padding-bottom: 0.8rem;
+.Board_title {
+  font-size: larger;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
 }
-
-.Help_icon {
-  font-size: 6rem;
-  margin-right: 2rem;
-}
-
-.Help_box {
-  background-color: #0070C0;
-  color: white;
-  width: 26em;
-  height: 10rem;
-  margin-left: 2rem;
-  padding: 1rem;
-  font-size: 1.6rem;
-}
-
-/* .Register_box {
-  background-color: #00AAF0;
-  color: white;
-  width: 20rem;
-  height: 10rem;
-  margin: 1.5rem;
-  margin-left: 3rem;
-  margin-top: 0;
-  padding: 1rem;
-  font-size: 1.6rem;
-}
-
-.Treatment_box {
-  background-color: #3399FF;
-  color: white;
-  width: 20rem;
-  margin-bottom: 1.5rem;
-  padding: 1rem;
-  font-size: 1.6rem;
-}
-
-.Inspection_box {
-  background-color: #0283EE;
-  color: white;
-  width: 20rem;
-  height: 10rem;
-  margin: 1.5rem;
-  margin-left: 3rem;
-  margin-top: 0;
-  padding: 1rem;
-  font-size: 1.6rem;
-}
-
-.DataAnalysis_box {
-  background-color: #65BFF7;
-  color: white;
-  width: 20rem;
-  margin-bottom: 1.5rem;
-  padding: 1rem;
-  font-size: 1.6rem;
-} */
